Fix some minor theme compat issues (#90)
Ordered list left margin
Inline code block when editing a reply
Embed block overflowing

--- a/src/styles/bbpress.scss
+++ b/src/styles/bbpress.scss
@@ -72,6 +72,7 @@ body:not(.gutenberg-support-loaded) .iso-editor {
 body.page .bbp-topic-form,
 body.single-topic .bbp-reply-form,
 body.topic-edit .bbp-topic-form,
+body.reply-edit .bbp-reply-form,
 body.single-forum .bbp-topic-form {
 	.editor-styles-wrapper code {
 		border: none;
